@@ -1,3 +1,7 @@
+Thu Jul  6 17:20:58 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* as.c (parse_args): NULL terminate the long option list.
+
 Tue Jul  4 14:08:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* config/tc-d30v.h: Include "write.h" for fixS.
